index.css
/* ... */
.card-button:hover {
    background-color: white;
}
.card-button:active {
    filter: opacity(0.8);
    transition: 0s;
}
.card-button-icon {
    width: 50%;
    aspect-ratio: 1;
    background-size: contain;
    background-position: 50% 50%;
    background-repeat: no-repeat;
}
@media screen and (max-width: 600px) {
    .card-button-container {
        gap: 10px;
    }
    .card-button {
        padding: 0px;
        width: 110px;
        height: 110px;
        font-size: 14px;
        gap: 5px;
    }
    .card-button-icon {
        width: 30%;
    }
    .card-button span {
        width: 85%;
    }
}


/*******************************
Paginated Table
*******************************/
.table {
    width: 100%;
    overflow-x: auto;
}
.table table {
    width: 100%;
    min-width: 700px;
}

.cell-pagination {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-end;
}
.pagination {
    display: flex;
    flex-direction: row;
    gap: 5px;
    align-items: flex-end;
    font-weight: 400;
}
#table-page-count {
    text-wrap: nowrap;
    margin-right: calc(5 * var(--px));
    margin-left: calc(10 * var(--px));
    color: rgba(255, 255, 255, 0.5);
}

.paginate-arrow {
    width: calc(25 * var(--px));
    height: calc(25 * var(--px));
    background-color: rgb(152, 134, 241);
    border-radius: 50%;
    position: relative;
    transition: 0.2s;
    cursor: pointer;
}
.paginate-arrow:hover {
    background-color: rgb(186, 173, 255);
}
.paginate-arrow:active {
    transition: 0s;
    background-color: rgb(128, 110, 219);
}
.paginate-left:before {
    position: absolute;
    content: '';
    border-top: calc(7.5 * var(--px)) solid transparent;
    border-bottom: calc(7.5 * var(--px)) solid transparent;
    border-right: calc(10 * var(--px)) solid white;
    margin-left: calc(6 * var(--px));
    margin-top: calc(5 * var(--px));
}
.paginate-right:before {
    position: absolute;
    content: '';
    border-top: calc(7.5 * var(--px)) solid transparent;
    border-bottom: calc(7.5 * var(--px)) solid transparent;
    border-left: calc(10 * var(--px)) solid white;
    margin-left: calc(9 * var(--px));
    margin-top: calc(5 * var(--px));
}

.table thead, .table body {
    min-width: 700px;
}
.table thead tr {
    font-weight: 700;
    background-color: #333b8f;
    text-align: left;
    transition: 0.2s;
}
.table thead tr:hover {
    background-color: #4049a8;
}
.table th {
    vertical-align: bottom;
    font-family: 'DM Sans';
}
.table th, .table td {
    padding: calc(10 * var(--px)) calc(15 * var(--px));
}
.table tbody tr {
    color: rgb(200, 200, 222);
    transition: 0.2s;
}
.table tbody tr:not(:last-child) {
    border-bottom: 2px dashed rgba(165, 158, 255, 0.5);
}
.table tbody tr:hover {
    background-color: rgba(100, 100, 255, 0.15);
}


/*******************************
Paginated table column width adjustment
*******************************/
#table-musicians tr td:nth-child(4n + 3), #table-musicians tr th:nth-child(3) {
    text-align: center;
    min-width: calc(150 * var(--px));
}
#table-musicians tr td:nth-child(4n + 4), #table-musicians tr th:nth-child(4) {
    min-width: calc(230 * var(--px));
}

#table-music-archive th {
    line-height: calc(18 * var(--px));
    text-wrap: nowrap;
    min-width: calc(150 * var(--px))
}
#table-music-archive th:nth-child(5) {
    text-align: center;
}
#table-music-archive th:nth-child(7) {
    min-width: calc(400 * var(--px));
}


/*******************************
Events
*******************************/
#section-events {
    width: 100%;
    display: flex;
    flex-direction: row;
    margin-bottom: var(--section-spacing);
    --sidebar-container-width: calc(400 * var(--px));
    --sidebar-width: calc(400 * var(--px));
}
@media screen and (max-width: 1300px) {
    #section-events {
        --sidebar-container-width: calc(350 * var(--px));
        --sidebar-width: calc(350 * var(--px));
    }
}
.section-events-no-sidebar {
    --sidebar-container-width: 0px !important;
}
#nav-events-sidebar {
    overflow: hidden;
    background-color: #1c4587;
    transition: 0.4s;
    width: var(--sidebar-container-width);
    min-width: var(--sidebar-container-width);
    transition: 0.2s;
    height: auto;
    interpolate-size: allow-keywords;
    display: flex;
    flex-direction: column;
}
#events-sidebar-toolbar-container {
    padding: calc(15 * var(--px));
    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(0, 0, 255, 0));
    /* background-color: rgba(255, 255, 255, 0.1); */
    width: var(--sidebar-width);
}

/* Left sidebar content */
#nav-events {
    width: var(--sidebar-width);
    overflow-y: auto;
    overflow-x: hidden;
}
#nav-events li {
    padding: calc(10 * var(--px)) calc(15 * var(--px));
    transition: 0.2s;
    user-select: none;
    display: flex;
    justify-content: space-between;
    gap: calc(15 * var(--px));
    align-items: center;
}
#nav-events li span:first-child {
    line-height: 1;
    text-wrap: balance;
}
#nav-events li span:last-child {
    text-wrap: nowrap;
    color: #8eb9ff;
    font-size: calc(15 * var(--px));
}
#nav-events li:not(.nav-events-active) {
    cursor: pointer;
}
#nav-events li:not(.nav-events-active):hover {
    background-color: rgba(150, 150, 255, 0.3);
}
#nav-events li:not(.nav-events-active):active {
    transition: 0s;
    background-color: rgba(150, 150, 255, 0.5);
}

.nav-events-upcoming span:first-child:after {
    content: '';
    display: inline-block;
    margin-bottom: calc(-3 * var(--px));
    margin-left: calc(5 * var(--px));
    width: calc(18 * var(--px));
    height: calc(18 * var(--px));
    background-image: url('assets/icons/sparkles.svg');
    background-size: contain;
    background-repeat: no-repeat;
}
.nav-events-upcoming.nav-events-active span:first-child:after {
    background-image: url('assets/icons/sparkles-outline.svg');
}
/* ... */

